[package]
name = "udp_connections"
version = "0.1.0"
edition = "2021"


[lib]
name = "udp_connections"
path = "src/lib.rs"

[[bin]]
name = "echo-server"
path = "src/server.rs"

[[bin]]
name = "test-client"
path = "src/client.rs"



[dependencies]
socket2 = "0.5.2"
tokio = { version="1.28.0", features=["net", "macros", "rt" , "rt-multi-thread", "time"] }